freya/vendor/odin-imguizmo/ImGuizmo/ImGuizmo.h

// call inside your own window and before Manipulate() in order to draw gizmo to
// that window. Or pass a specific ImDrawList to draw to (e.g.
// ImGui::GetForegroundDrawList()).
extern "C" void SetDrawlist(ImDrawList *drawlist = nullptr);
// call BeginFrame right after ImGui_XXXX_NewFrame();
extern "C" void BeginFrame();
// return true if mouse cursor is over any gizmo control (axis, plan or screen
// component)
extern "C" bool IsOver();
// return true if mouse IsOver or if the gizmo is in moving state
extern "C" bool IsUsing();
// enable/disable the gizmo. Stay in the state until next call to Enable.
// gizmo is rendered with gray half transparent color when disabled
extern "C" void Enable(bool enable);
// helper functions for manualy editing translation/rotation/scale with an input
// float translation, rotation and scale float points to 3 floats each Angles
// are in degrees (more suitable for human editing) example: float
// matrixTranslation[3], matrixRotation[3], matrixScale[3];
// ImGuizmo::DecomposeMatrixToComponents(gizmoMatrix.m16, matrixTranslation,
// matrixRotation, matrixScale); ImGui::InputFloat3("Tr", matrixTranslation, 3);
// ImGui::InputFloat3("Rt", matrixRotation, 3);
// ImGui::InputFloat3("Sc", matrixScale, 3);
// ImGuizmo::RecomposeMatrixFromComponents(matrixTranslation, matrixRotation,
// matrixScale, gizmoMatrix.m16);
//
// These functions have some numerical stability issues for now. Use with
// caution.
extern "C" void DecomposeMatrixToComponents(const float *matrix,
                                            float *translation, float *rotation,
                                            float *scale);
extern "C" void RecomposeMatrixFromComponents(const float *translation,
                                              const float *rotation,
                                              const float *scale,
                                              float *matrix);
extern "C" void SetRect(float x, float y, float width, float height);
// default is false
extern "C" void SetOrthographic(bool isOrthographic);
// call it when you want a gizmo
// Needs view and projection matrices.
// matrix parameter is the source matrix (where will be gizmo be drawn) and
// might be transformed by the function. Return deltaMatrix is optional
// translation is applied in world space
enum OPERATION {
  TRANSLATE_X = (1u << 0),
  TRANSLATE_Y = (1u << 1),
  TRANSLATE_Z = (1u << 2),
  ROTATE_X = (1u << 3),
  ROTATE_Y = (1u << 4),
  ROTATE_Z = (1u << 5),
  ROTATE_SCREEN = (1u << 6),
  SCALE_X = (1u << 7),
  SCALE_Y = (1u << 8),
  SCALE_Z = (1u << 9),
  BOUNDS = (1u << 10),
  SCALE_XU = (1u << 11),
  SCALE_YU = (1u << 12),
  SCALE_ZU = (1u << 13),

  TRANSLATE = TRANSLATE_X | TRANSLATE_Y | TRANSLATE_Z,
  ROTATE = ROTATE_X | ROTATE_Y | ROTATE_Z | ROTATE_SCREEN,
  SCALE = SCALE_X | SCALE_Y | SCALE_Z,
  SCALEU = SCALE_XU | SCALE_YU | SCALE_ZU, // universal
  UNIVERSAL = TRANSLATE | ROTATE | SCALEU
};
enum MODE { LOCAL, WORLD };
extern "C" bool Manipulate(const float *view, const float *projection,
                           OPERATION operation, MODE mode, float *matrix,
                           float *deltaMatrix = NULL, const float *snap = NULL,
                           const float *localBounds = NULL,
                           const float *boundsSnap = NULL);
// return true if the cursor is over the operation's gizmo
IMGUI_API bool IsOver(OPERATION op);
// from a x,y,z point in space and using Manipulation view/projection matrix,
// check if mouse is in pixel radius distance of that projected point
IMGUI_API bool IsOver(float *position, float pixelRadius);